fixes for text pos and overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,11 @@
     font-size: 16px;
 }
 
+.hide {
+    display: none !important;
+}
+
+
 .content {
     width: 80%;
     margin-left: auto;
@@ -24,6 +29,15 @@
 
 .nav a:hover {
     background-color: #4C7B8B;
+}
+
+.toggleNav {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding: 1rem;
+    background-color: #EFB036;
+    color: black
 }
 
 .profileContainer {
@@ -72,40 +86,39 @@
 @media (width <=1000px) {
     .profileContainer {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        flex-direction: row;
     }
 
     .profileContainer img {
-        width: 20%;
+        width: 50%;
         margin-bottom: 2rem;
     }
 
     .profileContainer p {
-        width: 80%;
-    }
-
-    .content {
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
+        width: 100%;
+        margin-left: 0;
     }
 
     .nav {
         display: flex;
-        flex-direction: row;
-        background-color: #EFB036;
+        flex-direction: column;
         align-items: center;
-        justify-content: space-evenly;
+    }
+
+    .nav a {
+        padding: 1rem;
+        color: black;
+        text-decoration: none;
     }
 
     .githubCards {
         display: flex;
+        position: relative;
         flex-direction: row;
         flex-wrap: wrap;
         row-gap: 1rem;
-        margin-top: 3rem;
-        width: 90%;
+        margin-top: 2rem;
+        width: 100%;
         justify-content: space-between;
         align-items: center;
     }
@@ -115,6 +128,6 @@
     }
 
     .githubCardMedium {
-        width: 48%;
+        width: 45%;
     }
 }
